0.25
Added a new osmosis-extract-mysql application for extracting regular changesets from mysql.
Removed use of String.isEmpty to minimise Java5 incompatibility.
Modified the default pipe connectivity functionality to use stack-based connectivity instead of queue-based connectivity.
Added a populateCurrentTables option to the --write-mysql-change task to match the --write-mysql task.
Added validation code to the merge tasks to verify that input data is sorted.
Enhanced serialisation code to eliminate class identification information in the stream where single data types are being stored.
Fixed a bug in the ListIdTracker class where unsorted ids were not being sorted correctly.
Added new dataset task --dataset-write-read for creating temporary datasets.
Added new dataset task --dataset-write for creating permanent datasets.
Added new dataset task --dataset-bounding-box for extracting bounding boxes from datasets.
Added new dataset task --dataset-dump for reading the entire contents of a dataset.
Command line applications now returns status codes, 0 for success, non-zero for failure.
Added new task --write-bdb for creating permanent bdb datasets.
Fixed the --read-api short name to be --ra instead of --wa.
Updated store implementations to use buffered io providing significant performance improvements.
Added a new osmosis-test-users-for-utf8 application for verifying the data integrity of the production user table.
Added "bound" support to the pipeline.

0.24
Fixed a bug in the XML node writing code where it would write a ',' character instead of '.' as the decimal separator in some locales.

0.23
Added support for a custom decoder when writing xml files to workaround the current production utf8 double encoding issue.
Added short task names to shorten command line (eg. --write-xml becomes --wx).
Fixed a node changeset bug where nodes created at the end of the interval were being excluded from the query.